--- a/client/manifest.json
+++ b/client/manifest.json
@@ -11,7 +11,7 @@
   ],
   "content_scripts":[
     {
-      "matches":["http://lpai.com.cn/Bid/*"],
+      "matches":["http://lpai.com.cn/Bid/*","http://lpai.com.cn/bidEnd/*"],
       "js":["flow.js","index.js","jQuery.js"]
     },
     {
